@@ -123,11 +123,20 @@ Certainty: possible
 Info: You should not mark as translatable "Default:" or "DefaultChoice:"
  fields, unless explicitly needed (e.g. default country, default language,
  etc.).  If this Default field really should be translated, you should
- explain translators how they should translate it by using brackets.  For
- example:
+ explain translators how they should translate it by using comments or
+ brackets.  For example:
+ .
+   # Translators: Default language name, but not translated
+   _Default: English
+ .
+ Or:
  .
    _Default: English[ Default language name, but not translated]
-Ref: po-debconf(7)
+ .
+ Note that in the first case, Lintian ignores the comment unless it
+ explicitly references translators and it is appears directly before
+ the field in question.
+Ref: po-debconf(7), #637881
 
 Tag: no-complete-debconf-translation
 Severity: wishlist
